# roncrm1

./: .env  .env.example  .env.test  .pre-commit-config.yaml  AGENT_DEVELOPMENT_PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt  ruff.toml  simple_app.py
.claude/agents/: code-debugger.md
context-engineering-intro/: INITIAL.md
context-engineering-intro/PRPs/: AI_CRM_MULTI_AGENT_PRP.md
context-engineering-intro/use-cases/mcp-server/.claude/agents/: qa-master.md  ux-ui-master.md
docs/: SETTINGS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/cases/: CaseFilters.tsx  CaseModal.tsx  CaseTable.tsx
frontend/src/components/communications/: CommunicationComposer.tsx  CommunicationList.tsx  CommunicationTemplates.tsx
frontend/src/components/dashboard/: AgentStatusCard.tsx  PipelineProgress.tsx  RecentActivity.tsx  StatsCard.tsx  SystemHealth.tsx  TopLawFirms.tsx  UrgentTasks.tsx
frontend/src/components/documents/: DocumentList.tsx  DocumentPreview.tsx  DocumentUpload.tsx
frontend/src/components/forms/: FormModal.tsx  NewCaseForm.tsx  NewLawFirmForm.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/reports/: ReportExport.tsx  ReportsDashboard.tsx  ReportsFilters.tsx
frontend/src/components/settings/: AgentSettings.tsx  IntegrationSettings.tsx  SystemSettings.tsx  UserSettings.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: CasesPage.tsx  CommunicationsPage.tsx  DashboardPage.tsx  DocumentsPage.tsx  LawFirmsPage.tsx  LoginPage.tsx  PlaintiffsPage.tsx  ReportsPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts  settingsService.ts  websocket.ts
migrations/: alembic.ini
migrations/alembic/: env.py
migrations/alembic/versions/: add_settings_tables.py
src/: __init__.py
src/agents/: __init__.py
src/agents/base/: agent.py  communication.py  registry.py
src/agents/document_intelligence/: __init__.py  agent.py  classification.py  extraction.py  validation.py
src/agents/email_service/: __init__.py  agent.py  templates.py  tracking.py
src/agents/lead_intake/: agent.py  parsers.py
src/agents/pipedrive_sync/: agent.py
src/agents/risk_assessment/: agent.py  analysis.py  scoring.py
src/agents/sms_service/: __init__.py  agent.py  compliance.py  providers.py  templates.py
src/api/: __init__.py  app.py  websocket.py
src/api/middleware/: auth.py  logging.py  rate_limiting.py
src/api/routes/: agents.py  auth.py  cases.py  communications.py  documents.py  law_firms.py  plaintiffs.py  reports.py  settings.py  settings_simple.py  webhooks.py
src/cli/: settings_manager.py
src/config/: __init__.py  database.py  settings.py
src/database/: connection.py
src/models/: __init__.py
src/models/database/: __init__.py  audit_log.py  base.py  case.py  communication.py  contract.py  document.py  law_firm.py  lawyer.py  plaintiff.py  settings.py
src/models/schemas/: __init__.py  common.py  plaintiff.py
src/services/ai/: __init__.py  openai_client.py
src/services/pipedrive/: __init__.py  client.py  sync.py
src/services/storage/: __init__.py  file_storage.py
src/utils/: __init__.py  initialize_settings.py  logging.py
tests/: conftest.py.backup  conftest_simple.py
tests/integration/: test_agent_workflows_simple.py  test_api_endpoints.py  test_api_validation.py  test_database_validation.py  test_system_validation.py  test_websocket_validation.py
tests/unit/: test_agent_registry.py  test_database_connection.py  test_openai_client.py  test_simple_components.py  test_websocket.py
